Fixed: Duplicate candidates are no longer counted twice sometimes overflowing the threshold. Introduced matchers. Fixed: Dates are now properly found using the local date format. Fixed: Filters take into account other filters when presenting possible selections. Introduced candidateRenderer property to allow for customization of the filter value

--- a/src/data-grid.component.less
+++ b/src/data-grid.component.less
@@ -17,7 +17,7 @@
         }
     }
 
-    tr.xn-cell {
+    td.xn-cell {
         background-color: transparent;
     }
 
